# IsoSurfacing

./: CMakeLists.txt  README.md  build.sh
App/console/: CMakeLists.txt  ISG_console.cpp  MyImplicitFunc.h
App/console_pytorch/: CMakeLists.txt  GridComp.h  ISG_console_pytorch.cpp  MyImplicitFunc.h  mesh_vis.h
App/evaluation/: CMakeLists.txt  evaluation.cpp
App/evaluation_cpu/: CMakeLists.txt  evaluation.cpp
test/: teaser.pt
